src/test/deca/syntax/invalid/decl_missing_equals.deca

//Syntaxe declaration variable
//Attendu : erreur token 5 inattendu

{
    int x  5 ;
}